--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Không di dời cây cổ thụ khi cải tạo vườn hoa Lý Thái Tổ",
+    "content": "UBND quận Hoàn Kiếm đã thông báo rằng trong quá trình cải tạo vườn hoa Lý Thái Tổ, các cây cổ thụ và cây có giá trị sẽ không bị di dời. Theo kế hoạch, sẽ có khoảng 100 cây được giữ nguyên, trong khi 25 cây nhỏ và sâu bệnh sẽ được thay thế hoặc dịch chuyển. Dự án cải tạo nhằm nâng cấp cảnh quan khu vực này, với các hạng mục như hệ thống nhạc nước và cải tạo đường dạo, dự kiến bắt đầu vào tháng 4 và hoàn thành trong tháng 10.",
+    "link": "https://vnexpress.net/khong-di-doi-cay-co-thu-khi-cai-tao-vuon-hoa-ly-thai-to-4864883.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Kế hoạch cải tạo vườn hoa Lý Thái Tổ có gì đặc biệt về việc di dời cây cổ thụ?",
+    "answers": [
+      {
+        "text": "Cây cổ thụ sẽ không bị di dời.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả cây xanh sẽ được di dời.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ di dời cây nhỏ và không có giá trị.",
+        "correct": false
+      },
+      {
+        "text": "Cây cổ thụ sẽ được thay thế bằng cây mới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đại học nào của Việt Nam lọt top thế giới lĩnh vực Khoa học tự nhiên?",
     "content": "Ba trường đại học của Việt Nam, bao gồm Đại học Duy Tân, Đại học Quốc gia TPHCM và Đại học Tôn Đức Thắng, đã được xếp hạng trong bảng xếp hạng QS World University Rankings by Subject 2025 ở lĩnh vực Khoa học tự nhiên. Trong đó, Đại học Duy Tân đứng ở vị trí 377 thế giới, là trường có thứ hạng cao nhất tại Việt Nam. Đại học Quốc gia TPHCM xếp hạng 451-500 và Đại học Tôn Đức Thắng xếp hạng 501-550. Việc này không chỉ nâng cao uy tín của các trường mà còn thúc đẩy sự cạnh tranh và chất lượng giáo dục trong nước.",
     "link": "https://dantri.com.vn/giao-duc/dai-hoc-nao-cua-viet-nam-lot-top-the-gioi-linh-vuc-khoa-hoc-tu-nhien-20250323232723072.htm",
@@ -135,28 +162,28 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
     "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
     "answers": [
       {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
         "correct": true
       },
       {
-        "text": "Để xây dựng một cầu mới.",
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
         "correct": false
       },
       {
-        "text": "Để tổ chức lễ hội âm nhạc.",
+        "text": "Không có sự thay đổi nào đáng kể",
         "correct": false
       },
       {
-        "text": "Vì lý do an ninh quốc gia.",
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -189,6 +216,33 @@
     ]
   },
   {
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "answers": [
+      {
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng một cầu mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức lễ hội âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do an ninh quốc gia.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
     "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
     "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
@@ -211,33 +265,6 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -1182,33 +1209,6 @@
     ]
   },
   {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -1235,6 +1235,33 @@
       },
       {
         "text": "Ung thư đại tràng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -1897,6 +1924,33 @@
     ]
   },
   {
+    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
+    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
+    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
+    "answers": [
+      {
+        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Uống nhiều đồ uống có gas.",
+        "correct": false
+      },
+      {
+        "text": "Không cần súc miệng sau khi ăn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
     "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
     "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
@@ -1919,33 +1973,6 @@
       },
       {
         "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị ung thư phổi có ăn thịt gà được không?",
-    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
-    "answers": [
-      {
-        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
-        "correct": true
-      },
-      {
-        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên ăn thịt gà sống.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
         "correct": false
       }
     ]
@@ -1982,6 +2009,33 @@
     ]
   },
   {
+    "title": "Bị ung thư phổi có ăn thịt gà được không?",
+    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
+    "answers": [
+      {
+        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
+        "correct": true
+      },
+      {
+        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên ăn thịt gà sống.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhịp tim chậm thế nào là bất thường?",
     "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
     "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
@@ -2004,33 +2058,6 @@
       },
       {
         "text": "Chỉ cần theo dõi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
-    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Uống nhiều đồ uống có gas.",
-        "correct": false
-      },
-      {
-        "text": "Không cần súc miệng sau khi ăn.",
         "correct": false
       }
     ]
