--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "Geely EX5 - xe điện gầm cao mới sắp bán tại Việt Nam",
+    "content": "Geely vừa giới thiệu mẫu xe điện EX5 mới tại Việt Nam, dự kiến sẽ được bán trong quý II năm 2025. EX5 là một mẫu crossover với công suất 214 mã lực và phạm vi hoạt động lên tới 430 km nhờ vào gói pin 60,22 kWh. Xe có thiết kế hiện đại, trang bị nhiều công nghệ tiên tiến và sẽ có hai phiên bản để người tiêu dùng lựa chọn.",
+    "link": "https://vnexpress.net/geely-ex5-xe-dien-gam-cao-moi-sap-ban-tai-viet-nam-4864762.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Geely EX5 sẽ được bán tại Việt Nam vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Quý II năm 2025",
+        "correct": true
+      },
+      {
+        "text": "Quý I năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Quý III năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Quý IV năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Không rõ thời gian",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Không di dời cây cổ thụ khi cải tạo vườn hoa Lý Thái Tổ",
     "content": "UBND quận Hoàn Kiếm đã thông báo rằng trong quá trình cải tạo vườn hoa Lý Thái Tổ, các cây cổ thụ và cây có giá trị sẽ không bị di dời. Theo kế hoạch, sẽ có khoảng 100 cây được giữ nguyên, trong khi 25 cây nhỏ và sâu bệnh sẽ được thay thế hoặc dịch chuyển. Dự án cải tạo nhằm nâng cấp cảnh quan khu vực này, với các hạng mục như hệ thống nhạc nước và cải tạo đường dạo, dự kiến bắt đầu vào tháng 4 và hoàn thành trong tháng 10.",
     "link": "https://vnexpress.net/khong-di-doi-cay-co-thu-khi-cai-tao-vuon-hoa-ly-thai-to-4864883.html",
@@ -1951,28 +1982,59 @@
     ]
   },
   {
-    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
-    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
-    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
     "answers": [
       {
-        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
+        "text": "Chỉ gây hại về mặt tâm lý.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư phổi có ăn thịt gà được không?",
+    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
+    "answers": [
+      {
+        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
+        "correct": true
+      },
+      {
+        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên ăn thịt gà sống.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
         "correct": false
       }
     ]
@@ -2032,59 +2094,28 @@
     ]
   },
   {
-    "title": "Bị ung thư phổi có ăn thịt gà được không?",
-    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
+    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
+    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
+    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
     "answers": [
       {
-        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
+        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
         "correct": true
       },
       {
-        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
+        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
         "correct": false
       },
       {
-        "text": "Chỉ nên ăn thịt gà sống.",
+        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
+        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
         "correct": false
       }
     ]
@@ -2666,6 +2697,33 @@
     ]
   },
   {
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "answers": [
+      {
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích gì cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tranh cãi gay gắt những khóa học dạy làm cha mẹ tốt",
     "content": "Tại Trung Quốc, các khóa học dạy làm cha mẹ đang gây tranh cãi với những khẩu hiệu như \"Cha mẹ sửa mình, không phải sửa con\". Những khóa học này thu hút nhiều phụ huynh đang gặp khó khăn trong việc nuôi dạy con cái. Tuy nhiên, hiệu quả của các khóa học này vẫn là đề tài gây tranh cãi, khi nhiều phụ huynh vẫn chưa thấy được cải thiện trong mối quan hệ với con hoặc tình trạng của con cái. Thêm vào đó, công ty cung cấp khóa học cũng đã bị phạt vì vi phạm quảng cáo.",
     "link": "https://dantri.com.vn/giao-duc/tranh-cai-gay-gat-nhung-khoa-hoc-day-lam-cha-me-tot-20250322150409471.htm",
@@ -2723,33 +2781,6 @@
       },
       {
         "text": "Do trẻ không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
-    "answers": [
-      {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích gì cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
         "correct": false
       }
     ]
@@ -3157,64 +3188,6 @@
     ]
   },
   {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
-    "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
-    "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Dự án chỉnh trang biển Bãi Sau Vũng Tàu đã hoàn thiện được bao nhiêu phần trăm?",
-    "answers": [
-      {
-        "text": "60%",
-        "correct": true
-      },
-      {
-        "text": "70%",
-        "correct": false
-      },
-      {
-        "text": "50%",
-        "correct": false
-      },
-      {
-        "text": "80%",
-        "correct": false
-      },
-      {
-        "text": "90%",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
     "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
     "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
@@ -3295,6 +3268,64 @@
       },
       {
         "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
+    "answers": [
+      {
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
+        "correct": true
+      },
+      {
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
+        "correct": false
+      },
+      {
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
+    "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
+    "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Dự án chỉnh trang biển Bãi Sau Vũng Tàu đã hoàn thiện được bao nhiêu phần trăm?",
+    "answers": [
+      {
+        "text": "60%",
+        "correct": true
+      },
+      {
+        "text": "70%",
+        "correct": false
+      },
+      {
+        "text": "50%",
+        "correct": false
+      },
+      {
+        "text": "80%",
+        "correct": false
+      },
+      {
+        "text": "90%",
         "correct": false
       }
     ]
